// Vitest Snapshot v1

exports[`createLoginCallbackScript > calls "createSha256CspHash" with correct args 1`] = `
[
  [
    "opener.postMessage(\\"login-success\\", \\"https://dummyAppDomain\\")",
  ],
]
`;

exports[`createLoginCallbackScript > returns a correct value 1`] = `
{
  "cspHash": "dummySha256CspHash",
  "script": "opener.postMessage(\\"login-success\\", \\"https://dummyAppDomain\\")",
}
`;

exports[`createLoginCallbackScript > when "envName" is "personal" > returns a correct value 1`] = `
{
  "cspHash": "dummySha256CspHash",
  "script": "opener.postMessage(\\"login-success\\", \\"*\\")",
}
`;
